footer no longer pushes header out of the screen
fixed by setting body min-height to 100vh, and content min-height to 100vh-50px (this commit is made in order to checkout previous commit and see why the fix worked)

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ a {
   width: 100%;
   background-color: white;
   border: 1px solid #c9c9c9;
+  border-radius: 5px;
 }
 
 .container {
@@ -152,14 +153,14 @@ header > a {
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
+  height: fit-content;
   background-color: #f4f4f4;
-  background-image: url("images/");
 }
 
 #content {
   display: flex;
-  min-height: calc(100% - 50px);
+  min-height: calc(100vh - 50px);
 }
 
 nav {
@@ -209,21 +210,24 @@ main > * {
   padding-right: 40px;
 }
 
+#notes-div {
+  position: sticky;
+  top: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
 #notes-header {
   height: 40px;
   background-color: #ffd296;
   text-align: center;
   line-height: 40px;
-  position: sticky;
-  top: 60px;
   border-radius: 5px 5px 0px 0px;
 }
 
 #notes {
   resize: none;
   height: calc(100vh / 3);
-  position: sticky;
-  top: 100px;
   border-top: 0;
   border-color: #ffd296;
   border-radius: 0px 0px 5px 5px;
@@ -234,10 +238,6 @@ main > * {
   position: relative;
   padding: 10px;
   margin-bottom: 10px;
-}
-
-#create-form-div-p {
-  padding-bottom: 20px;
 }
 
 #form-name {
@@ -286,11 +286,13 @@ main > * {
 
 #rating > input {
   display: none;
+  align-self: center;
 }
 
 #rating > label {
   cursor: pointer;
-  font-size: 22px;
+  font-size: 24px;
+  line-height: 24px;
   margin: 0px 2px;
   transition: color 0.2s;
   color: #c9c9c9;
@@ -358,6 +360,7 @@ main > * {
 #search-div {
   height: 40px;
   border: 1px solid #c9c9c9;
+  border-radius: 5px;
   margin-right: 10px;
   width: 300px;
   display: flex;
@@ -402,7 +405,7 @@ main > * {
   scrollbar-width: none;
 }
 
-#list-table,
+.list-table,
 #no-record-header {
   width: 100%;
   border-collapse: collapse;
@@ -412,7 +415,7 @@ main > * {
   height: 100%;
 }
 
-#list-table th {
+.sortable-header {
   position: sticky;
   top: 0;
   background-color: #d9d9d9;
@@ -424,19 +427,23 @@ main > * {
   background-color: #c9c9c9;
 }
 
-#list-table tr {
+.list-table tr {
   height: 40px;
   border-bottom: 1px solid #d9d9d9;
 }
 
-#list-table tr:hover {
+.list-table tr:hover {
   background-color: #e6e6e6;
   cursor: pointer;
 }
 
-#list-table td {
+.list-table td {
   line-height: 40px;
   padding-left: 20px;
+}
+
+#customer-list-table td:nth-of-type(3) {
+  font-size: 18px;
 }
 
 #col1 {
@@ -452,7 +459,8 @@ main > * {
 }
 
 footer {
-  height: 150px;
+  height: 800px;
+  background-color: red;
 }
 
 #customer-info-div {
@@ -489,6 +497,7 @@ footer {
   text-align: center;
   line-height: 24px;
   font-size: 24px;
+  margin-top:5px;
 }
 
 #customer-details tr {
